Fix contrast issues (#153)

--- a/scss/userbox.scss
+++ b/scss/userbox.scss
@@ -70,6 +70,7 @@
 
   .userbox__value--type-timestamp {
     font-size: 0.6rem;
+    color: $main-text;
     white-space: nowrap;
   }
 
